Fix issue with icon exit app alignment

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -735,6 +735,7 @@ sup {
 .ic-block-h24{display:inline-block;vertical-align:middle;margin:rem-calc(-2 8 0 0)}
 .ic-block-h18{display:inline-block;vertical-align:middle;margin:rem-calc(-2 4 0 0)}
 .ic-block-h24--share{display:inline-block;vertical-align:middle;margin-top:rem-calc(-4)}
+.ic-block-h24.mod-ic-exit-app{position:absolute;right:rem-calc(-8);top:rem-calc(24);}
 .ic-block-h48{display:inline-block;vertical-align:middle;margin-right:rem-calc(8)}
 .ic-block-h48-title-left{position:relative;top:rem-calc(12);margin:rem-calc(0 8 8 0)}
 .rounded-img-d64{width:rem-calc(64)!important;height:rem-calc(64)!important;margin:0 auto rem-calc(24);border-radius:50%;background-size: cover;
